force-app/main/default/objects/Notification_Work_Item__c/Notification_Work_Item__c.object-meta.xml
<CustomObject>
    <label>Notification Work Item</label>
    <nameField>
        <displayFormat>WI-{0000}</displayFormat>
        <label>Notification Work Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>