force-app/main/default/objects/Notification_Work_Item__c/fields/Correlation_Key__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Key__c</fullName>
    <label>Correlation Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>