force-app/main/default/objects/Notification_Work_Item__c/fields/Last_Reminder_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_At__c</fullName>
    <label>Last Reminder At</label>
    <type>DateTime</type>
</CustomField>