force-app/main/default/objects/Notification_Work_Item__c/fields/Maximum_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Reminders__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Maximum Reminders</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>