force-app/main/default/objects/Notification_Work_Item__c/fields/Next_Reminder_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Reminder_At__c</fullName>
    <label>Next Reminder At</label>
    <type>DateTime</type>
</CustomField>