force-app/main/default/objects/Notification_Work_Item__c/fields/Pharos_Log__c.field-meta.xml
<CustomField>
    <fullName>Pharos_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log</label>
    <referenceTo>pharos__Log__c</referenceTo>
    <relationshipLabel>Notification Work Items</relationshipLabel>
    <relationshipName>Notification_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>