force-app/main/default/objects/Notification_Work_Item__c/fields/Reaction_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Time_Hours__c</fullName>
    <label>Reaction Time (Hours)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>