force-app/main/default/objects/Notification_Work_Item__c/fields/Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reminder Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>