force-app/main/default/objects/Notification_Work_Item__c/fields/Resolution_Comment__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comment__c</fullName>
    <label>Resolution Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>