force-app/main/default/objects/Notification_Work_Item__c/fields/Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Status__c</fullName>
    <label>Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>ClosedWResolve</fullName>
                <label>Closed – without Resolving</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>