force-app/main/default/objects/Notification_Work_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Status__c</columns>
    <columns>Reaction_Time_Hours__c</columns>
    <columns>Next_Reminder_At__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Reminder_Count__c</columns>
    <columns>Resolution_Comment__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Items</label>
</ListView>