force-app/main/default/objects/Notification_Work_Item__c/listViews/Closed.listView-meta.xml
<ListView>
    <fullName>Closed</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Work_Status__c</field>
        <operation>equals</operation>
        <value>Closed – Not Actionable,Completed</value>
    </filters>
    <label>Закриті</label>
</ListView>