force-app/main/default/objects/Notification_Work_Item__c/listViews/Ignored.listView-meta.xml
<ListView>
    <fullName>Ignored</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Work_Status__c</field>
        <operation>equals</operation>
        <value>Ignored</value>
    </filters>
    <label>Проігноровані</label>
</ListView>