force-app/main/default/objects/Notification_Work_Item__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Work_Status__c</field>
        <operation>equals</operation>
        <value>New,Assigned,In Progress,Escalated</value>
    </filters>
    <label>Відкриті</label>
</ListView>